Bug 317428 - default spell dictionary is always loaded for new tabs
Summary: default spell dictionary is always loaded for new tabs
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: 0.5.80
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-27 10:05 UTC by Alin M Elena
Modified: 2013-03-28 11:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2013-03-27 10:05:02 UTC
default spell dictionary is always loaded for new tabs

if you have more than one spelling language installed and you set a non default one for one of your contacts... when you restart the text ui with that contact the combobox is correctly restored but the language set for spelling in the input line is still the default one.



Reproducible: Always
Comment 1 David Edmundson 2013-03-28 11:57:08 UTC
Git commit 57de7ad0583392f1ef533d2fffa5b0b2897b5c02 by David Edmundson, on behalf of Eugene Shalygin.
Committed on 28/03/2013 at 12:55.
Pushed by davidedmundson into branch 'master'.

Fix set of spell cheking language during configuration loading

REVIEW: 109771

M  +13   -3    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/57de7ad0583392f1ef533d2fffa5b0b2897b5c02