Fix set of spell cheking language during configuration loading

REVIEW: 109771
BUG: 317428